--- a/culturaland/src/main/resources/src/visualModule/index.html
+++ b/culturaland/src/main/resources/src/visualModule/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../../libs/css/reset.css">
+    <link rel="stylesheet" href="../../libs/css/main.css">
     <title>可视化展示</title>
 </head>
 <body>
-    
+    <div id="wl_map_warp">
+        <div class="wl_fix_box">
+            测试定位
+        </div>
+    </div>
 </body>
+<script src="../../libs/js/jquery-3.3.1.min.js"></script>
+<!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=abe01fe7be4c6d4f7243f48eff4822f7"></script>
+<script src="https://webapi.amap.com/loca?v=1.3.0&key=abe01fe7be4c6d4f7243f48eff4822f7"></script> -->
+<script src="https://webapi.amap.com/maps?v=1.4.15&key=abe01fe7be4c6d4f7243f48eff4822f7"></script>
+<script src="https://webapi.amap.com/loca?v=1.3.0&key=abe01fe7be4c6d4f7243f48eff4822f7"></script>
+<script src="../../libs/js/map.js"></script>
 </html>
